// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codeReducer 1`] = `
{
  "code": "loading...",
  "error": null,
  "loading": null,
}
`;

exports[`codeReducer 2`] = `
{
  "foo": "bar",
  "loading": true,
}
`;

exports[`codeReducer 3`] = `
{
  "code": "foobar",
  "foo": "bar",
  "loading": false,
}
`;

exports[`codeReducer 4`] = `
{
  "code": "ups",
  "foo": "bar",
  "loading": false,
}
`;

exports[`getRunmeLink 1`] = `"command=setup&repository=git%40github.com%3Achristian-bromann%2Fdocusaurus-theme-github-codeblock.git&fileToOpen=src%2Ftheme%2FReferenceCodeBlock%2FREADME.md"`;

exports[`getRunmeLink 2`] = `"command=setup&repository=https%3A%2F%2Fgithub.com%2Fchristian-bromann%2Fdocusaurus-theme-github-codeblock.git&fileToOpen=src%2Ftheme%2FReferenceCodeBlock%2FREADME.md"`;

exports[`getRunmeLink 3`] = `"command=setup&repository=https%3A%2F%2Fgithub.com%2Fchristian-bromann%2Fdocusaurus-theme-github-codeblock.git&fileToOpen=src%2Ftheme%2FReferenceCodeBlock%2FREADME.md"`;

exports[`getRunmeLink 4`] = `"command=setup&repository=git%40github.com%3Achristian-bromann%2Fdocusaurus-theme-github-codeblock.git&fileToOpen=src%2Ftheme%2FReferenceCodeBlock%2FREADME.md"`;

exports[`getRunmeLink 5`] = `"command=setup&fileToOpen=foobar"`;

exports[`getRunmeLink 6`] = `"command=setup&fileToOpen=foofoo&repository=foobar"`;

exports[`should parse GitHub reference properly 1`] = `
{
  "fromLine": 0,
  "org": "christian-bromann",
  "repo": "docusaurus-theme-github-codeblock",
  "title": "src/theme/ReferenceCodeBlock/index.tsx",
  "toLine": Infinity,
  "url": "https://raw.githubusercontent.com/christian-bromann/docusaurus-theme-github-codeblock/main/src/theme/ReferenceCodeBlock/index.tsx",
}
`;

exports[`should parse GitHub reference properly 2`] = `
{
  "fromLine": 104,
  "org": "christian-bromann",
  "repo": "docusaurus-theme-github-codeblock",
  "title": "src/theme/ReferenceCodeBlock/index.tsx",
  "toLine": 107,
  "url": "https://raw.githubusercontent.com/christian-bromann/docusaurus-theme-github-codeblock/main/src/theme/ReferenceCodeBlock/index.tsx",
}
`;
